--- a/Todo.cabal
+++ b/Todo.cabal
@@ -24,6 +24,8 @@ executable Todo-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , regex-posix
+                     , text
                      , Todo
   default-language:    Haskell2010
 
