--- a/Todo.cabal
+++ b/Todo.cabal
@@ -26,6 +26,7 @@ executable Todo-exe
   build-depends:       base
                      , regex-posix
                      , text
+                     , process
                      , Todo
   default-language:    Haskell2010
 
